--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,14 @@ server.ssl.key-store-type=PKCS12
 server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-password=fooflo
 server.ssl.key-alias=tomcat
-        
+
+# конфигурация связанная с консул
+spring.cloud.consul.host=127.0.0.1
+spring.cloud.consul.port=8500
+spring.cloud.consul.discovery.instance-id=SOA3IDMAIN
+spring.cloud.consul.discovery.service-name=SOA3MAIN
+spring.cloud.consul.discovery.scheme=https
+spring.cloud.consul.discovery.health-check-tls-skip-verify=true
+
+
+spring.main.allow-circular-references=true
